don't reset revision on reload but increment it

this avoids that we assume we are back to an old revision even
if the loaded text is totally different

BUG: 499311